--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'">
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <title>Hello World!</title>
+    <title></title>
 </head>
 <body>
-<h1>Hello World!</h1>
+    <div id="time"></div>
 </body>
 </html>
